# whisker

./: Cargo.toml  README.md  build.rs
data/: rsicon.gresource.xml  whisker.gresource.xml  window.blp  window.ui
src/: icon.rs  main.rs  window.rs
src/window/: icon.blp  icon.rs  imp.rs  mod.rs
