[package]
name = "whisker"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_6"] }
fuzzy-matcher = "0.3.7"
gtk = { version = "0.9.4", package = "gtk4", features = ["v4_16", "blueprint"] }
once_cell = "1.20.2"

[build-dependencies]
glib-build-tools = "0.20.0"
